--- a/views/main.ejs
+++ b/views/main.ejs
@@ -36,7 +36,7 @@
         <br>
 
         <label for="hashtag">Hashtag:</label>
-        <input type="text" id="hashtag" name="hashtag" required> <!-- Changed type to text -->
+        <input type="text" id="hashtag" name="hashtag" required> (# işareti olmadan giriniz ör: GazaStarving)
 
         <br>
 
